# rs-dashboard

./: .gitignore  .gitignore copy  LICENSE  README.md  pyproject.toml  readme.txt  run.bat  run.sh
api/: __init__.py  main.py
api/routes/: __init__.py  admin.py  charts.py  htmx.py  pages.py
api/services/: __init__.py  price_service.py  rs_service.py  task_service.py
calc-engine/: api.py  engine_db.py  rs_calculator.py  settings.py  tasks.py  test_pipeline.py
db/: __init__.py  db.py  models.py
price-engine/: calc_engine.py  engine_db.py  tasks.py  test_pipeline.py  yfinance_provider.py
price-engine/test_data/: tickerlist_test.csv
templates/: admin.html  dashboard.html  upload.html
templates/partials/: navbar.html  pipeline_stages.html  rs_settings.html  ticker_table.html
tests/: verify_rs_calculation.py
