[project]
name = "rs-dashboard"
version = "3.0.0"
description = "Relative Strength Dashboard for Stock Analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.30",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.6",
    "huey>=2.5.0",
    "sse-starlette>=1.8.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]
